update: detailed READme